--- a/stats-server/src/main/resources/application.yml
+++ b/stats-server/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-feign:
-  client:
-    url: ${FEIGN_URL}
 
 spring:
   jpa:
@@ -10,3 +7,6 @@ spring:
     url: ${SPRING_DATASOURCE_URL}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+
+server:
+  port: 9090
