--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,18 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
-    build: ./stats-server
+    build: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-
-
-  stats-db:
-    image: postgres:14-alpine
-    container_name: stats-db
-    ports:
-      - "6540:5432"
-    environment:
-      - POSTGRES_DB=stats-db
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
 
   ewm-service:
-    build: ./ewm-service
+    build: ewm-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
     depends_on:
@@ -32,8 +21,16 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
       - FEIGN_URL=http://stats-server:9090
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+
+  stats-db:
+    image: postgres:14-alpine
+    container_name: stats-db
+    ports:
+      - "6540:5432"
+    environment:
+      - POSTGRES_DB=stats-db
+      - POSTGRES_USER=stats-db
+      - POSTGRES_PASSWORD=password
 
   ewm-db:
     image: postgres:14-alpine
@@ -42,5 +39,5 @@ services:
       - "6541:5432"
     environment:
       - POSTGRES_DB=ewm-db
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=ewm-db
+      - POSTGRES_PASSWORD=password
