--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - SPRING_DATASOURCE_USERNAME=stats-db
+      - SPRING_DATASOURCE_PASSWORD=password
+      - SERVER_PORT=9090
 
   ewm-service:
     build: ewm-service
@@ -21,6 +24,8 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
       - FEIGN_URL=http://stats-server:9090
+      - SPRING_DATASOURCE_USERNAME=ewm-db
+      - SPRING_DATASOURCE_PASSWORD=password
 
   stats-db:
     image: postgres:14-alpine
