--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
-spring.datasource.username=stats-db
-spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
+#spring.datasource.username=stats-db
+#spring.datasource.password=password
 spring.sql.init.mode=always
 
-server.port=9090
+#server.port=9090
 spring.mvc.format.date-time=iso
