--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.output.ansi.enabled=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:6541/ewm-db
-#spring.datasource.username=ewm-db
-#spring.datasource.password=password
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm
+spring.datasource.username=ewm-db
+spring.datasource.password=password
 spring.sql.init.mode=always
-#server.port=8080
-feign.url=${STATS_SERVER_URL:http://localhost:9090}
+server.port=8080
+feign.url=http://localhost:9090
 spring.mvc.format.date-time=iso
