--- a/stats-server/Dockerfile
+++ b/stats-server/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:11-alpine-jdk
+FROM bellsoft/liberica-openjdk-alpine:11.0.16.1-1
 COPY target/*.jar stats-server.jar
-ENTRYPOINT ["java","-jar","/stats-server.jar"]
+ENTRYPOINT ["java","-jar", "-Dspring.profiles.active=docker", "/stats-server.jar"]
